k8s/vshow.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vshow-main
  labels:
    app.kubernetes.io/instance: ui
    app.kubernetes.io/name: vshow
spec:
  containers:
  - name: vshow
    image: singjoh/vshow:latest
    imagePullPolicy: Never # Its already there
    ports:
      - containerPort: 8080
    command: 
      - python
      - -u
      - app.py
    volumeMounts:
      - name: data
        mountPath: /data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: pvc-files
