k8s/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-postgresql
  namespace: vshow
  labels:
    app: postgresql
    release: db
spec:
  ports:
  - name: tcp-postgresql
    port: 5432
    targetPort: 5432
    protocol: TCP
    nodePort: 30432
  type: NodePort
  selector:
    app: postgresql
    release: db
