k8s/vshow.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vshow
  namespace: vshow
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: ui
    app.kubernetes.io/name: vshow
  type: ClusterIP
