k8s/pg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-postgresql
  namespace: vshow
spec:
  rules:
  - host: postgresql.local
    http:
      paths:
      - backend:
          service:
            name: db-postgresql
            port:
              number: 5432
        path: /
        pathType: Prefix
