k8s/vshow.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vshow
  namespace: vshow
  annotations:
    nginx.org/proxy-http-version: "1.1"
    nginx.org/proxy-read-timeout: "3600"
    nginx.org/proxy-send-timeout: "3600"
    nginx.org/websocket-services: "vshow"
    nginx.org/configuration-snippet: |
      proxy_http_version 1.1;
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "Upgrade";
spec:
  ingressClassName: nginx
  rules:
  - host: vshow.local
    http:
      paths:
      - backend:
          service:
            name: vshow
            port:
              number: 80
        path: /
        pathType: Prefix
